# ChemGraphBuilder

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_export.py  schema.dot  schema_relationship_exporter.py  search.html  setup.py  sitemap.xml  test.py
1.node_collector_processor/: index.html
2.relationship_collector_processor/: index.html
3.graph_nodes_loader/: index.html
4.graph_relationships_loader/: index.html
Data/: setup.py
Layered_Schema/: FigureA.dot  FigureB.dot  FigureC.dot  FigureD.dot  FigureE.dot  FigureF.dot  FigureG.dot  layered_schema.dot  legend.dot
Tests/: test_add_graph_nodes.py
about/: index.html
chemgraphbuilder/: __init__.py  add_graph_nodes.py  add_graph_relationships.py  graph_nodes_loader.py  graph_relationships_loader.py  neo4jdriver.py  node_collector_processor.py  node_data_processor.py  node_ontology_enricher.py  node_properties_extractor.py  relationship_collector_processor.py  relationship_data_processor.py  relationship_properties_extractor.py  requirements.txt  setup_data_folder.py  setup_project.py
chemgraphbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: node_schema.yml
css/: custom.css
docs/: 1.node_collector_processor.md  2.relationship_collector_processor.md  3.graph_nodes_loader.md  4.graph_relationships_loader.md  about.md  documentation.md  graph_nodes_loader.md  graph_relationships_loader.md  index.md  node_collector_processor.md  relationship_collector_processor.md
documentation/: index.html
(+26 files in other folders)
